Correct alignment of medium titles.

--- a/app/sass/components/_site-title.scss
+++ b/app/sass/components/_site-title.scss
@@ -49,7 +49,7 @@ $titles: (
   ),
   medium: (
     size: 36px,
-    margin-top: 4px,
+    margin-top: 18px,
     width: inherit
   ),
   long: (
